sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:14: error: type mismatch;
 found   : Unit
 required: Boolean
      if (mem=0) {
             ^AlgBubbleSort2:15: error: not found: value fianle
        fianle=1
        ^